footer extra margin fix

--- a/dcp-app/src/Footer.css
+++ b/dcp-app/src/Footer.css
@@ -56,7 +56,8 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin-left: 10dvw;
+    padding-left: 10dvw;
+    width: 80dvw;
   }
   .tuFooterRight,
   .tuFooterCenter,
